@startuml
title "Spring Batch Skelton code"
class BatchConfig {

}
class BatchItemReader {
    +read()
}
class BatchItemProcessor {
    +process()
}
class BatchItemWriter {
    +write()
}

BatchConfig ..> BatchItemReader : reader
BatchConfig ..> BatchItemProcessor : processor
BatchConfig ..> BatchItemWriter : writer
BatchConfig .. InputItem
BatchConfig .. OutputItem
BatchItemReader .. InputItem
BatchItemProcessor .. InputItem
BatchItemProcessor .. OutputItem
BatchItemWriter .. OutputItem


@enduml